// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/ProgressBar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-Fyfyc cDUnxV sc-jXktwP eTEXdq"
      color="#fff"
    >
      <div
        class="sc-bQdQlF MhrIg"
      >
        10
        %
      </div>
      <div
        class="sc-jGVbCA clexNs"
        style="width: 10%;"
      >
        <div
          class="sc-fXoxut bFuxBo"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Different Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-Fyfyc cDUnxV sc-jXktwP eTEXdq"
      color="#fff"
      type="danger"
    >
      <div
        class="sc-bQdQlF MhrIg"
      >
        10
        %
      </div>
      <div
        class="sc-jGVbCA eGrcvu"
        style="width: 10%;"
      >
        <div
          class="sc-fXoxut bFuxBo"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/ProgressBar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-eFubAy kVQCHm"
  >
    <div
      class="sc-Fyfyc ggnkhg sc-jXktwP eTEXdq"
      color="#fff"
    >
      <div
        class="sc-bQdQlF MhrIg"
      >
        10
        %
      </div>
      <div
        class="sc-jGVbCA clexNs"
        style="width: 10%;"
      >
        <div
          class="sc-fXoxut bFuxBo"
          style="width: 1000%;"
        >
          10
          %
        </div>
      </div>
    </div>
  </div>
</div>
`;
